<resources>
    <string name="app_name">Found</string>
    <string name="lost">lost</string>
    <string name="found">found.</string>
    <string name="settings">Settings</string>

    <string name="found_name">Found Item</string>
    <string name="found_location">Location of Found Item</string>
    <string name="found_description">Description of Found Item</string>


    <string name="name">Your Name</string>
    <string name="email">Your Email</string>
    <string name="number">Your Number</string>
    <string name="location">Your Location</string>
    <string name="radius">Search Radius</string>
    <string name="about">About</string>

</resources>
