<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorAccent"
    tools:context="com.example.cal13.found.settings">

    <TextView
        android:text="@string/settings"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/homeText"
        android:textSize="50sp"
        android:id="@+id/settingsText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/settingsText"
        android:inputType="text"
        android:textSize="20sp"
        android:hint="@string/name"
        android:ems="10"
        android:textColor="@color/foundText"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:fontFamily="sans-serif-light"
        android:layout_centerHorizontal="true"
        android:background="@drawable/found_edittext_border"
        android:id="@+id/setting_name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/setting_name"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:hint="@string/email"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/foundText"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/found_edittext_border"
        android:id="@+id/setting_email" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/setting_email"
        android:inputType="phone"
        android:textSize="20sp"
        android:hint="@string/email"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/foundText"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/found_edittext_border"
        android:id="@+id/setting_number" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/setting_number"
        android:inputType="text"
        android:textSize="20sp"
        android:hint="@string/location"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/foundText"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/found_edittext_border"
        android:id="@+id/setting_location" />


</RelativeLayout>
